--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,12 @@
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
-        <activity android:name=".AddListActivity" />
-        <activity android:name=".TaskItemActivity" />
+        <activity
+            android:name=".AddListActivity"
+            android:exported="false"/>
+        <activity
+            android:name=".TaskItemActivity"
+            android:exported="false"/>
         <activity
             android:name=".MainActivity"
             android:exported="true">
